Se trabaja en agregado de animaciones

--- a/html/products.html
+++ b/html/products.html
@@ -47,7 +47,7 @@
         <section class="containerContent">
             <div class="subtitle">
                 <h3 class="contentSubtitle">Productos</h3>
-                <hr>
+                <!-- <hr> TODO: Quitar linea horizontal -->
             </div>
             <!-- Filtrado y ordenamiento de productos -->
             <section class="filters">
