--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
         <section class="containerContentHome">
             <div class="subtitle">
                 <h3 class="contentSubtitle">Productos destacados</h3>
-                <hr>
+                <!-- <hr>  TODO: Quitar linea horizontal -->
             </div>
             <div class="productCard product1">
                 <img src="./images/pda_COD Modern Warfare.webp" alt="producto">
@@ -82,7 +82,7 @@
         <section class="containerContentHome">
             <div class="subtitle">
                 <h3 class="contentSubtitle">Ofertas disponibles</h3>
-                <hr>
+                <!-- <hr> TODO: Quitar linea horizontal -->
             </div>
             <div class="productCard product1">
                 <img src="./images/pda_BioShock.webp" alt="producto">
