--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <link href="http://fonts.cdnfonts.com/css/cubano" rel="stylesheet">
     <link href="http://fonts.cdnfonts.com/css/sofia-pro" rel="stylesheet">
     <link href="http://fonts.cdnfonts.com/css/roboto-mono" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
     <link rel="stylesheet" href="css/style.css">
     <title>Nekzus Game Store</title>
 </head>
@@ -27,7 +28,9 @@
         </div>
         <div class="title centerItemsGrid">
             <a href="./index.html">
-                <h1 class="titleSite">Nekzus<span class="subtitleSite">Game Store</span></h1>
+                <div class="animate__animated animate__rubberBand">
+                    <h1 class="titleSite">Nekzus<span class="subtitleSite">Game Store</span></h1>
+                </div>
             </a>
         </div>
     </header>
@@ -51,7 +54,6 @@
         <section class="containerContentHome">
             <div class="subtitle">
                 <h3 class="contentSubtitle">Productos destacados</h3>
-                <!-- <hr>  TODO: Quitar linea horizontal -->
             </div>
             <div class="productCard product1">
                 <img src="./images/pda_COD Modern Warfare.webp" alt="producto">
@@ -82,7 +84,6 @@
         <section class="containerContentHome">
             <div class="subtitle">
                 <h3 class="contentSubtitle">Ofertas disponibles</h3>
-                <!-- <hr> TODO: Quitar linea horizontal -->
             </div>
             <div class="productCard product1">
                 <img src="./images/pda_BioShock.webp" alt="producto">
@@ -152,6 +153,7 @@
             <p class="copyright">&copy; 2022 Copyright - Nekzus Game Store</p>
         </div>
     </footer>
+
 </body>
 
 </html>
